--- a/headphones/3-index.html
+++ b/headphones/3-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="3-style.css" />
     <link
       href="https://cdn.boxicons.com/fonts/brands/boxicons-brands.min.css"
       rel="stylesheet"
@@ -131,7 +131,24 @@
         <p>amet consectetur</p>
       </div>
     </div>
-     <script src="script.js"> </script>
+<section class="contact-section">
+  <form action="">
+    <h2>Contact us</h2>
+
+    <label for="name">Name</label>
+    <input type="text" id="name" name="name" required minlength="4" />
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required minlength="4" />
+
+    <label for="message">Your Message</label>
+    <textarea id="message" name="message" rows="4" required minlength="5"></textarea>
+
+    <button type="submit">Call To Action</button>
+  </form>
+</section>
+
+ <script src="script.js"> </script>
   </body>
 </html>
 
