--- a/headphones/8-index.html
+++ b/headphones/8-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="8-style.css" />
     <link
       href="https://cdn.boxicons.com/fonts/brands/boxicons-brands.min.css"
       rel="stylesheet"
@@ -148,8 +148,28 @@
   </form>
 </section>
 
+ <footer>
+  <div class="footer-top">
+    <div class="logo">
+      <a href="index.html" target="_blank">
+        <img src="/headphones/images/logo_headphones.png" alt="Headphones Logo" />
+      </a>
+    </div>
+    <div class="social-icons">
+      <a href="#"><i class="bxl bx-google"></i></a>
+      <a href="#"><i class="bxl bx-facebook-circle"></i></a>
+      <a href="#"><i class="bxl bx-github"></i></a>
+      <a href="#"><i class="bxl bx-linkedin"></i></a>
+    </div>
+  </div>
+
+  <div class="copyright">
+    <p><i class="bx bx-copyright"></i> Headphones</p>
+  </div>
+</footer>
+
+ </main>
+
  <script src="script.js"> </script>
   </body>
 </html>
-
-   
